[gd_scene load_steps=2 format=3 uid="uid://7fxhjsr05gkq"]

[ext_resource type="Script" path="res://menu/Admin_Registration.gd" id="1_agvpa"]

[node name="Registration" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 361.0
offset_bottom = 180.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Registration" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_agvpa")

[node name="BatchRegisterBtn" type="Button" parent="Control/Registration"]
offset_left = 279.0
offset_top = 143.0
offset_right = 351.0
offset_bottom = 174.0
text = "Batch
"

[node name="NamelLbl" type="RichTextLabel" parent="Control/Registration"]
layout_mode = 0
offset_left = 18.0
offset_top = 15.0
offset_right = 178.0
offset_bottom = 42.0
text = "Name:"

[node name="EmailLbl" type="RichTextLabel" parent="Control/Registration"]
layout_mode = 0
offset_left = 19.0
offset_top = 54.0
offset_right = 179.0
offset_bottom = 81.0
text = "Email:"

[node name="CompanyLbl" type="RichTextLabel" parent="Control/Registration"]
layout_mode = 0
offset_left = 21.0
offset_top = 92.0
offset_right = 108.0
offset_bottom = 119.0
text = "Company:"

[node name="NameTxt" type="LineEdit" parent="Control/Registration"]
layout_mode = 0
offset_left = 107.0
offset_top = 13.0
offset_right = 348.0
offset_bottom = 44.0

[node name="EmailTxt" type="LineEdit" parent="Control/Registration"]
layout_mode = 0
offset_left = 106.0
offset_top = 53.0
offset_right = 347.0
offset_bottom = 84.0

[node name="CompanyTxt" type="LineEdit" parent="Control/Registration"]
layout_mode = 0
offset_left = 107.0
offset_top = 91.0
offset_right = 348.0
offset_bottom = 122.0

[node name="RegisterBtn" type="Button" parent="Control/Registration"]
layout_mode = 0
offset_left = 145.0
offset_top = 144.0
offset_right = 217.0
offset_bottom = 175.0
text = "Register
"

[node name="ErrorLbl" type="RichTextLabel" parent="Control/Registration"]
layout_mode = 0
offset_left = 19.0
offset_top = 119.0
offset_right = 353.0
offset_bottom = 149.0

[node name="HTTPRequest" type="HTTPRequest" parent="Control/Registration"]

[node name="HTTPRequest_PWD" type="HTTPRequest" parent="Control/Registration"]

[node name="HTTPRequest_email" type="HTTPRequest" parent="Control/Registration"]

[node name="BackBtn" type="Button" parent="."]
offset_left = 3.0
offset_top = 158.0
offset_right = 64.0
offset_bottom = 178.0
theme_override_font_sizes/font_size = 8
text = "Back to Menu"

[connection signal="button_down" from="Control/Registration/BatchRegisterBtn" to="Control/Registration" method="_on_batch_register_btn_button_down"]
[connection signal="button_down" from="Control/Registration/RegisterBtn" to="Control/Registration" method="_on_register_btn_button_down"]
[connection signal="button_down" from="BackBtn" to="Control/Registration" method="_on_back_btn_button_down"]
